# ssmync

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  ssm_change.rs  ssm_change_error.rs
src/client/: ec2.rs  mod.rs  ssm.rs
